Done with main core workflow of project
